@@ -21,6 +21,7 @@ Fixes an issue where Prime Video overlays/collections would not be built when th
 Fixes an issue where Rotten Tomatoes Verified Hot wasn't working
 Updates `Alien vs Predator` and `X-Men` lists to new lists which include most recent releases
 Adds `style` template variable for Streaming and Chart defaults, allowing user to choose color or white logos for collection posters
+Added `Paramount+ with Showtime` to both `Paramount+` and `Showtime` for Networks and Streaming, any existing weighting is unchanged.
 
 # Bug Fixes
 Fixed the `cast` search option for the `imdb_search` builder
